# http_server

./: CMakeLists.txt  README.md
example/: Petr Mikhalitsyn.html  main.html
example/Petr Mikhalitsyn_files/: 1-8758-128-1  aes_light.css  audioplayer.js  common.css  common_web.js  emoji.js  imn.js  loader_nav8781600926544_3.js  module.css  notifier.css  notifier.html  notifier.js  page.css  page.js  post.css  poster.js  profile.css  profile.js  q_frame.html  saved_resource  stickers.js  ui_media_selector.css  ui_media_selector.js
sources/: CMakeLists.txt  main.cpp  server.cpp  server.h
